# photo-circuit

./: .gitignore
photo-circuit-api/: Cargo.toml
photo-circuit-api/src/: main.rs
photo_circuit_api/: Cargo.toml  report.html  requirements.txt
photo_circuit_api/photocircuit/: photocircuit.py
photo_circuit_api/photocircuit/component_detection/: base_component_detection_service.py  llm_component_detection_service.py  model.py  multistage_llm_component_detection_service.py
photo_circuit_api/photocircuit/component_detection/model/: circuit_image.py
photo_circuit_api/photocircuit/preprocessing/: base_preprocessing_service.py  composite_preprocessing_service.py  scaling_preprocessing_service.py  thickness_preprocessing_service.py
photo_circuit_api/photocircuit/utils/: common.py  component_detection.py  prompt_utils.py
photo_circuit_api/src/: lib.rs  main.rs
photo_circuit_api/src/component_detection/: component_detection_service.rs  llm_component_detection.rs  mod.rs
photo_circuit_api/src/utils/: mod.rs  prompt_utils.rs
photo_circuit_api/test/: constants.py  test_utils.py
photo_circuit_api/test/component_detection/: __init__.py  model.py  report.html  screen_sizes_intv_spacing.csv  temp_errors.csv  test_llm_component_detection_service.py  test_multistage_llm_component_detection_service.py  utils.py
photo_circuit_api/test/report/: fix_images.py  model.py  report.py  template.html  utils.py
photo_circuit_api/tests/: lib.rs  test_utils.rs
photo_circuit_api/tests/component_detection/: llm_component_detection.rs  mod.rs
(+17 files in other folders)
