[package]
name = "photo-circuit-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"
langchain-rust = "4.3.0"
serde_json = "1.0.120"
